--- a/DepartmentManagement/Views/Division/Upsert.cshtml
+++ b/DepartmentManagement/Views/Division/Upsert.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DivisionViewModel
 
 @{
-    var title = "Add";
+    var title = "Добавить";
 }
 
 <br />
@@ -14,7 +14,7 @@
         @if (Model.Division != null)
         {
             //edit
-            title = "Edit";
+            title = "Редактировать";
         }
 
         <div class="col-12 border-bottom">
@@ -69,16 +69,16 @@
                 <div class="col-4 offset-4">
                     @if (Model.Division == null)
                     {
-                        <button type="submit" class="btn btn-primary form-control">Create</button>
+                        <button type="submit" class="btn btn-primary form-control">Добавить</button>
                     }
                     else
                     {
-                        <button type="submit" class="btn btn-primary form-control">Update</button>
+                        <button type="submit" class="btn btn-primary form-control">Редактировать</button>
                     }
                 </div>
 
                 <div class="col-4">
-                    <a asp-action="Index" class="btn btn-success form-control">Back to List</a>
+                    <a asp-action="Index" class="btn btn-success form-control">Назад</a>
                 </div>
 
             </div>
