--- a/DepartmentManagement/Views/Employee/Details.cshtml
+++ b/DepartmentManagement/Views/Employee/Details.cshtml
@@ -145,7 +145,7 @@
                 @if (User.IsInRole(Common.AdminRole))
                 {
                     <a class="btn btn-primary text-white" asp-action="managepositions" asp-route-Id="@Model.Employee.Id">
-                        Position
+                        Должности
                     </a>
                 }
             </div>
