--- a/DepartmentManagement/Views/Department/Index.cshtml
+++ b/DepartmentManagement/Views/Department/Index.cshtml
@@ -5,11 +5,11 @@
 <div class="border p-4 bg-white">
     <div class="row">
         <div class="col-9">
-            <h2 class="text-info"> Department </h2>
+            <h2 class="text-info"> Департамент </h2>
         </div>
 
         <div class="col-3 text-right">
-            <a asp-action="Upsert" class="btn btn-info form-control"> Add </a>
+            <a asp-action="Upsert" class="btn btn-info form-control"> Добавить </a>
         </div>
     </div>
     <div>
@@ -43,17 +43,17 @@
 
                                 @if (User.IsInRole(Common.AdminRole))
                                 {
-                                    <a class="btn btn-primary text-white" asp-action="Upsert" asp-route-Id="@item.Id">
-                                        Edit
+                                    <a class="btn btn-warning text-white" asp-action="Upsert" asp-route-Id="@item.Id">
+                                        Редактировать
                                     </a>
                                     <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id"
                                        onclick="return confirm('Подтвердите удаление:')">
-                                        Delete
+                                        Удалить
                                     </a>
                                 }
 
                                 <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
-                                    Details
+                                    Детали
                                 </a>
 
                             </div>
