--- a/DepartmentManagement/Views/Division/Details.cshtml
+++ b/DepartmentManagement/Views/Division/Details.cshtml
@@ -11,18 +11,18 @@
             {
                 @if (dep.Id == Model.Division.DepartmentId)
                 {
-                    <h5 class="text-center">
+                    <h3 class="text-center mb-3">
                         Департамент:
                         <span>
                             @dep.Name
                         </span>
-                    </h5>
+                    </h3>
                 }
             }
-            <p>
+            <h5>
                 @Model.Division.Name
-            </p>
-
+            </h5>
+            
             <p>
                 Кабинет:
                 <strong>
@@ -90,12 +90,12 @@
         @if (User.IsInRole(Common.AdminRole))
         {
             <a class="btn btn-primary text-white" asp-action="manageemployees" asp-route-Id="@Model.Division.Id">
-                Employees
+                Сотрудники
             </a>
         }
 
         <a asp-action="Index" class="btn btn-primary">
-            Back
+            Назад
         </a>
     </div>
 
